# xllm

./: .gitignore  CMakeLists.txt  beam_search.cpp  beam_search.h  cache_select.cpp  cache_select.h  clear.sh  setup.py
.github/workflows/: cursor_comment_agent.yml  cursor_upstream_poll.yml
xllm/: CMakeLists.txt
xllm/api_service/: completion_service_impl.cpp
xllm/c_api/: README.md  types.h
xllm/c_api/examples/: simple_rec_completions.cpp
xllm/c_api/internal/: rec.cpp
xllm/core/common/: global_flags.cpp  global_flags.h  nvtx_helper.cpp  nvtx_helper.h  rec_model_utils.h
xllm/core/distributed_runtime/: llm_engine.cpp  rec_engine.cpp  rec_engine.h  rec_master.cpp  remote_worker.cpp  worker_service.cpp
xllm/core/framework/batch/: CMakeLists.txt  batch.cpp  (+6 more)
xllm/core/kernels/: ops_api.cpp  param.h
xllm/core/layers/cuda/: CMakeLists.txt  attention.cpp  attention.h  flashinfer_attention.cpp  flashinfer_attention.h  flashinfer_planinfo.cpp  flashinfer_planinfo.h  xattention.cpp  xattention.h  xattention_test.cpp
xllm/core/runtime/: CMakeLists.txt  acl_graph_executor_impl.cpp  acl_graph_executor_rec_impl.cpp  acl_graph_executor_rec_impl.h  cuda_graph_executor_impl.cpp  cuda_graph_executor_impl.h  executor.cpp  forward_params.h  llm_engine.cpp  llm_engine.h  llm_master.cpp  llm_worker_impl.cpp  llm_worker_impl.h  master.cpp  params_utils.cpp  rec_worker_impl.cpp  rec_worker_impl.h  worker.cpp  worker_impl.cpp  worker_impl.h
xllm/core/scheduler/: fixed_steps_scheduler.cpp  fixsteps_scheduler.cpp
xllm/models/llm/: qwen3.h  qwen3_moe.h
xllm/proto/: worker.proto
(+52 files in other folders)
